--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,8 +18,6 @@ $white: #FFFFFF;
 $enable-responsive-font-sizes: true;
 
 // navbar
-$navbar-padding-x: 0;
-$navbar-dark-color: $light;
 $navbar-light-hover-color: $primary;
 $navbar-light-active-color: $primary;
 $navbar-nav-link-padding-x: .7rem;
